--- a/styles/Home1.module.css
+++ b/styles/Home1.module.css
@@ -53,7 +53,7 @@
     
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 .usercontent1{
     height: 100%;
@@ -250,7 +250,7 @@
       .usercontent{
         height: 100%;
         width: 100%;
-        justify-content: space-evenly;
+        /* justify-content: space-evenly; */
         display: flex;
         align-items: center;
       
