--- a/styles/Home1.module.css
+++ b/styles/Home1.module.css
@@ -230,6 +230,7 @@
       }
 
       .header{
+        margin-top: 30px;
         width: 100%;
         height: 10%;
     flex-direction: column-reverse;
@@ -250,13 +251,15 @@
       .usercontent{
         height: 100%;
         width: 100%;
-        /* justify-content: space-evenly; */
+        justify-content: space-around;
         display: flex;
         align-items: center;
+        margin-top: 30px;
       
     }
 
     .addN{
+        margin-top: 20px;
         padding: 1rem;
         width: 100%;
         height: auto;
@@ -322,7 +325,7 @@
     .usercontent1{
         height: 100%;
         width: 100%;
-    
+    margin-top: 20px;
         display: flex;
         align-items: center;
         justify-content: flex-end;
