--- a/styles/Home2.module.css
+++ b/styles/Home2.module.css
@@ -1,10 +1,10 @@
 .container{
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 .main{
    width: 100%;
-   height: 100%;
+   height: auto;
    padding: 1rem;
    display: flex;
   
