--- a/styles/Home1.module.css
+++ b/styles/Home1.module.css
@@ -82,6 +82,7 @@
     width: 70%;
     height: 100%;
     display: flex;
+    justify-content: center;
     
 }
 
@@ -319,6 +320,7 @@
         height: auto;
         display: flex;
         flex-direction: column;
+       
         
     }
 
